<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nearby Places</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_hospital_list">HospitalListActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_notes">MyNotesActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_radius_label">Search Radius (m)</string>
    <string name="pref_radius_key" translatable="false">radius</string>
    <string name="pref_radius_default" translatable="false">2000</string>
    <string name="title_activity_new_note">NewNoteActivity</string>
    <string name="dialog_title">Please Wait...</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Main App Label -->
    <string name="health_label">HEALTH</string>
    <string name="education_label">EDUCATION</string>
    <string name="shopping_label">SHOPPING</string>
    <string name="sports_label">SPORTS</string>
    <string name="travel_label">TRAVEL</string>
    <string name="restaurant_label">RESTAURANT</string>
    <string name="finance_label">FINANCE</string>
    <string name="religion_label">RELIGION</string>

    <!-- Navigation item label -->
    <string name="rate">Rate App</string>
    <string name="settings">Settings</string>
    <string name="share">Tell a Friend</string>
    <string name="about">About</string>

    <!-- Activity title labels -->
    <string name="action_bar_nearest_place">Nearest Places</string>
    <string name="action_bar_location">Location Details</string>
    <string name="action_bar_mapview">Map View</string>
    <string name="action_bar_settings">Settings</string>



</resources>
