<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_below="@+id/tool_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:onClick="onHospitalClick"
                android:background="@drawable/pressed_state"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/health"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/hospital"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/health_label"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:onClick="onSchoolClick"
                android:background="@drawable/pressed_state"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/education"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/school"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/education_label"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:onClick="onShoppingClick"
                android:background="@drawable/pressed_state"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/shopping"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/shopping"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/shopping_label"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:onClick="onSportsClick"
                android:background="@drawable/pressed_state"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/sports"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/sports"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/sports_label"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:onClick="onTravelClick"
                android:background="@drawable/pressed_state"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/travel"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/travel"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/travel_label"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:onClick="onRestaurantClick"
                android:background="@drawable/pressed_state"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/restaurant"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/restaurant"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/restaurant_label"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:onClick="onFinanceClick"
                android:background="@drawable/pressed_state"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/finance"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/finance"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/finance_label"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:onClick="onReligionClick"
                android:background="@drawable/pressed_state"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/religion"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/religion"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/religion_label"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"/>
            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

    </ScrollView>

</LinearLayout>

    <!-- The navigation drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/drawer_view" />


</android.support.v4.widget.DrawerLayout>